# Lifestone-church-ai

./: .eslintignore  .gitattributes  .gitignore  README.md  add_logs.py  broadcast-output.html  cleanup.py  convert-ncair1-to-ggml.py  fix-cargo.js  fix-cargo3.js  fix-crates.js  fix-dotenvy.js  fix-vite.js  fix-watch.js  fix_bundle_size.py  fix_cargo.py  fix_destructure.py  fix_dialog.py  fix_dialog3.py  fix_dialog4.py  fix_imports.py  fix_lib.py  fix_lifestone.py  fix_model_path.py  fix_result.py  fix_state.py  fix_state2.py  fix_state_final.py  fix_stt2.py  fix_stt3.py  fix_stt4.py  fix_stt_final.py  fix_stt_regex.py  fix_stt_syntax.py  fix_unwrap.py  index.html  max_threads.py  package.json  patch-phase4.js  patch-phase6.js  (+26 more)
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
data/: build-bible-db.ts  compute-embeddings.ts  precompute-embeddings-onnx.py  precompute-embeddings.py  prepare-embeddings.ts
documentation/: remote-control.md
scripts/: setup-windows.ps1
sidecar/: ppt_sidecar.py
src/: App.tsx  broadcast-output.tsx
src-tauri/: Cargo.toml  signing-key.txt  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/lifestone-api/: Cargo.toml
src-tauri/crates/lifestone-api/src/: coerce.rs  dispatch.rs  http.rs  lib.rs
src-tauri/crates/lifestone-audio/: Cargo.toml
src-tauri/crates/lifestone-audio/src/: lib.rs  vad.rs
src-tauri/crates/lifestone-bible/: Cargo.toml
src-tauri/crates/lifestone-bible/src/: lib.rs
src-tauri/crates/lifestone-broadcast/: Cargo.toml
src-tauri/crates/lifestone-broadcast/src/: lib.rs
src-tauri/crates/lifestone-detection/: Cargo.toml
src-tauri/crates/lifestone-detection/src/: lib.rs  pipeline.rs
src-tauri/crates/lifestone-notes/: Cargo.toml
src-tauri/crates/lifestone-notes/src/: lib.rs
src-tauri/crates/lifestone-stt/: Cargo.toml
src-tauri/crates/lifestone-stt/src/: lib.rs  whisper.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: audio.rs  bible.rs  broadcast.rs  detection.rs  remote.rs  stt.rs
web/: README.md
(+39 files in other folders)
